gcc/testsuite/g++.dg/modules/class-1_d.C
import One;

int z = sizeof (Bob::X); // { dg-error "not a member of .Bob." }
